<resources>
    <string name="app_name">TakeUrPills</string>
    <string name="new_account">Crear una Cuenta</string>
    <string name="header_homepage">TakeUrPill</string>
    <string name="slogan_homepage">No olvides tus pastillas!</string>
    <string name="text_listPills">Lista</string>
    <string name="text_addPills">Agregar</string>
    <string name="text_findPills">Buscar</string>
    <string name="details_activity">Detalles</string>
    <string name="list_activity">Tratamientos</string>
    <string name="add_activity">Agregar</string>
    <string name="et_addPill_titulo_hint">Título</string>
    <string name="et_addPill_dosis_hint">Dosis</string>
    <string name="rg_addPill_unidadMedida_title">Unidad de Medida</string>
    <string name="rb_addPill_unidadMedidad_mililitros">Mililitros</string>
    <string name="rb_addPill_unidadMedidad_unidades">Unidades</string>
    <string name="rg_addPill_frecuencia_title">Frecuencia</string>
    <string name="dias_lunes">Lunes</string>
    <string name="dias_martes">Martes</string>
    <string name="dias_miercoles">Miércoles</string>
    <string name="dias_jueves">Jueves</string>
    <string name="dias_viernes">Viernes</string>
    <string name="dias_sabado">Sábado</string>
    <string name="dias_domingo">Domingo</string>
    <string name="et_addPill_veces_hint">Veces Diarias</string>
    <string name="rg_addPill_horas_title">Horas</string>
    <string name="et_addPill_cantidadRestante_hint">Cantidad Restante</string>
    <string name="et_addPill_reminder_hint">Recordatorio Comprar</string>
    <string name="bt_addPill_horas">(+) Agregar hora</string>
    <string name="bt_save">Guardar</string>
    <string name="bt_update">Actualizar</string>
    <string name="title_save">Añadir</string>
    <string name="title_update">Editar</string>
    <string name="Error_Adding">Hubo un error Añadiendo el dato</string>
    <string name="bt_cancel">Cancelar</string>
    <string name="tv_addPill_header">Ingrese el tratamiento</string>
    <string name="tv_editPill_header">Editar el tratamiento</string>
    <string name="tv_steps_paso1_content">Llena la información de tú tratamiento.</string>
    <string name="tv_steps_paso1_header">Paso 1:</string>
    <string name="bt_steps_nextStep">siguiente paso</string>
    <string name="tv_steps_saltar"><![CDATA[Saltar ->]]></string>
    <string name="tv_steps_paso2_header">Paso 2:</string>
    <string name="tv_steps_paso2_content">Ingresa la dosis y cantidad</string>
    <string name="tv_steps_paso3_header">Paso 3:</string>
    <string name="tv_steps_paso3_content">Ingresa la frecuencia</string>
    <string name="tv_steps_paso4_header">Paso 4:</string>
    <string name="tv_steps_paso4_content">Configura alarmas y reminders</string>
    <string name="bt_steps_addPills">Iniciar</string>
    <string name="tv_detailsPill_Title">Nombre del Tratamiento</string>
    <string name="tv_detailsPill_dosis">Dosis:</string>
    <string name="tv_detailsPill_frecuencia">Frecuencia:</string>
    <string name="tv_detailsPill_repeticion">Repetición:</string>
    <string name="tv_detailsPill_horas">Horas:</string>
    <string name="tv_detailsPill_cantidadRestante">Cantidad Restante:</string>
    <string name="tv_detailsPill_reminder">Recordatorio:</string>
    <string name="bt_detailsPill_edit">Editar</string>
    <string name="bt_detailsPill_delete">Borrar</string>
    <string name="title_activity_find_pills">Mapa</string>
    <string name="home_icon">Inicio</string>
    <string name="return_icon">Volver</string>
    <string name="settings_icon">Ajustes</string>
    <string name="settings_first">Primer Opc</string>
    <string name="settings_second">Segunda Opc</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="warning">Aviso</string>
    <string name="empty_treatment">Actualmente no posee ningun medicamento</string>
    <string name="existing_treatment">Ya existe un tratamiento con este nombre, por favor cambie el nombre de su tratamiento y vuelva a intentarlo</string>
    <string name="close">Cerrar</string>
    <string name="save_success">Tratamiento guardado con exito</string>
    <string name="edit_success">Tratamiento modificado con exito</string>
    <string name="delete_success">Tratamiento eliminado con exito</string>
    <string name="empty_fields">Error, Por favor rellene todos los espacios con información valida</string>
    <string name="daily_times">Veces Diarias</string>
    <string name="add_message">Agregar Hora(+)</string>
    <string name="cancel_message">¿Seguro que deseas cancelar los cambios?</string>
    <string name="delete_message">¿Seguro que desea borrar el tratamiento?</string>
    <string name="yes_message">Si</string>
    <string name="no_message">No</string>
    <string name="mililitro_mesage">Mililitro</string>
    <string name="mililitros_mesage">Mililitros</string>
    <string name="unidad_mesage">Unidad</string>
    <string name="unidades_mesage">Unidades</string>
    <string name="ab_detail_pill_header">Detalles</string>
    <string name="ab_list_pill_header">Tratamientos</string>
    <string name="tv_detailsPill_una_vez_dia_">vez por dia</string>
    <string name="tv_detailsPill_veces_dia">veces por dia</string>
    <string name="bt_alarm_stop">Detener</string>
    <string name="bt_alarm_takePill">Tomar Pildora</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">La dirección de correo electrónico es inválida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="auth_failed">Fallo de autentificación</string>
    <string name="permission_rationale">"Se requiere permiso a los contactos para esta operación."</string>
    <string name="bt_home_about">Acerca</string>
    <string name="stop_alarm"> Stop </string>
    <string name= "reminder">Es hora de tu pastilla!</string>

    <!-- Strings related to Maps -->
    <string name="map_zeroResult_message">No hay farmacias cerca.</string>
    <string name="map_placeNotFound_message">Información de lugar no disponible.</string>
    <string name="map_noWebsite_text">No hay sitio web disponible.</string>
    <string name="map_noRate_text">No hay calificación disponible.</string>
    <string name="map_noPrice_text">No hay precio disponible.</string>
    <string name="map_ratingTag_text">Calificación: </string>
    <string name="map_priceTag_text">Precio: </string>
    <string name="map_details_header">Detalles Farmacia</string>
    <string name="map_noPhone_text">No Teléfono Disponible.</string>

</resources>
